fix spacing

--- a/JS Drumkit/drumkit.css
+++ b/JS Drumkit/drumkit.css
@@ -48,6 +48,11 @@ body {
   transform: scale(1.2);
 }
 
+.f,
+.k {
+  margin-left: 10px;
+}
+
 kbd {
   display: block;
   font-size: 4rem;
